# mise-gettext-dagger

./: .gitignore  CMakeLists.txt  README.md  create_releases  dagger.json  docker-build.sh  gpg-keys.txt  mirrors.txt  mise.toml  requirements.txt
.dagger/: pyproject.toml
.dagger/src/mise_gettext_dagger/: __init__.py  main.py
.github/workflows/: build-releases.yml  build.yaml  pr-build-test.yml
scripts/: download.sh  list_versions.py  verify_gpg.py
